--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
         <version>10.0.0</version>
         <scope>provided</scope>
     </dependency>
+      <dependency>
+          <groupId>jakarta.platform</groupId>
+          <artifactId>jakarta.jakartaee-web-api</artifactId>
+          <version>10.0.0</version>
+          <scope>provided</scope>
+      </dependency>
     
     <!-- Jakarta Standard Tag Library -->
 <!--    <dependency>-->
