--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ server.http2.enabled=true
 spring.mvc.view.prefix=/
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@101.79.11.144:1521:xe
-spring.datasource.username=system
-spring.datasource.password=system
+spring.datasource.url=jdbc:oracle:thin:@223.130.143.138:1521:xe
+spring.datasource.username=scott
+spring.datasource.password=tiger
 
 mybatis.config-location=classpath:sql/mybatis-config.xml
 
